--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,13 @@ services:
     volumes:
         # Custom config to nginx path
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-  # php:
+  php:
+    build: 
+      context: ./docker
+      dockerfile: Dockerfile.php
+    volumes: 
+        # Delegated means changes must be sync after sometime to container
+      - ./src:/var/www/html:delegated
   # mysql:
   # composer:
   # artisan:
