--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
     volumes: 
         # Delegated means changes must be sync after sometime to container
       - ./src:/var/www/html:delegated
-  # mysql:
+  mysql:
+    image: mysql:5.7
+    env_file: ./env/mysql.env
   # composer:
   # artisan:
   # npm:
