--- a/docker/Dockerfile.composer
+++ b/docker/Dockerfile.composer
@@ -1,13 +1,13 @@
-FROM php:7.4-fpm-alpine
+FROM composer:latest
 WORKDIR /var/www/html
-RUN docker-php-ext-install pdo pdo_mysql
+# Ignores platform related dependecny issues
+ENTRYPOINT [ "composer", "--ignore-platform-reqs" ]
 
 # ----------------------------
 # Use below dockerfile to fix permission related issues
 # ----------------------------
-# FROM php:7.4-fpm-alpine
-# WORKDIR /var/www/html
-# COPY src .
-# RUN docker-php-ext-install pdo pdo_mysql
+# FROM composer:latest
 # RUN addgroup -g 1000 laravel && adduser -G laravel -g laravel -s /bin/sh -D laravel
 # USER laravel
+# WORKDIR /var/www/html
+# ENTRYPOINT [ "composer", "--ignore-platform-reqs" ]
