--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,11 @@ services:
   mysql:
     image: mysql:5.7
     env_file: ./env/mysql.env
-  # composer:
+  composer:
+    build: 
+      context: ./docker
+      dockerfile: Dockerfile.composer
+    volumes: 
+      - ./src:/var/www/html
   # artisan:
   # npm:
