--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     volumes:
         # Custom config to nginx path
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+        # All the php code must be accessible to nginx server
+      - ./src:/var/www/html
   php:
     build: 
       context: ./docker
