--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,18 @@ services:
       dockerfile: Dockerfile.composer
     volumes: 
       - ./src:/var/www/html
-  # artisan:
-  # npm:
+  artisan:
+    build: 
+      context: ./docker
+      dockerfile: Dockerfile.php
+    volumes: 
+      - ./src:/var/www/html
+    # Overriding dockerfle by adding an entryfile
+    # We can create a separate dockerfile for artisan instead of this
+    entrypoint: ["php", "/var/www/html/artisan"]
+  npm:
+    image: node:14-alpine
+    # Below 2 commands are substitue to creating our own utility docker image
+    working_dir: /var/www/html
+    entrypoint: ["npm"]
+
